--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
+    "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-svg": "^11.0.1",
     "react-navigation": "^4.2.2",
     "react-navigation-stack": "^2.2.3"
   },
